Fix horizontal scrollbar in Edge #2

--- a/customize.dist/main.css
+++ b/customize.dist/main.css
@@ -724,21 +724,19 @@ html.cp,
 }
 .cp #noscriptContainer #noscript {
   width: 1000px;
-  display: inline-block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  z-index: 2;
 }
 .cp #noscriptContainer #noscript noscript {
   font-size: 25px;
-  width: 1000px;
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 0;
   color: #fff;
-  transform: translateY(-50%);
 }
 .cp #main {
   background: url('/customize/bg3.jpg') no-repeat center center;
@@ -772,24 +770,19 @@ html.cp,
 }
 .cp #main #align-container,
 .cp #main_other #align-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
-  display: inline-block;
   width: 1000px;
   max-width: 90%;
+  position: relative;
 }
 .cp #main #main-container,
 .cp #main_other #main-container {
-  position: absolute;
   display: inline-block;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  width: 100%;
 }
 .cp #main #data,
 .cp #main_other #data {
